--- a/style.css
+++ b/style.css
@@ -1,20 +1,34 @@
 body {
 	background-color: #FDFAFA;
-    font: 20px/1.5 "Neue Haas Unica W01 Regular", Helvetica,Arial,sans-serif;
+    font: 22px/1.5 "Neue Haas Unica W01 Regular", Helvetica, Arial,sans-serif;
     color: rgba(35,30,30,0.9);
-    text-align: left;
+    /*text-align: left;*/
     text-rendering: optimizeLegibility;
-    margin-left: 20%;
- 
+    margin-left: auto;
+    margin-right: auto;
+    width: 50em
 }
-
 a{
-	color: #6699ff;
 	text-decoration: none;
 }
 
-ol{
-	list-style-type: upper-roman
-	}
+a.Tyler{
+	color: #6699ff;
+}
 
-/* Github color: #40bf40*/
+a.Github{
+	color: #00CC77;
+}
+
+ol{
+	list-style-type: upper-roman;
+	margin: 1em;
+}
+
+ul{
+	list-style-type: none;
+}
+
+div {
+	margin: auto;
+}
