--- a/style.css
+++ b/style.css
@@ -1,8 +1,7 @@
 body {
 	background-color: #FDFAFA;
-    font: 22px/1.5 "Neue Haas Unica W01 Regular", Helvetica, Arial,sans-serif;
+    font: 24px/1.5 "Neue Haas Unica W01 Regular", Helvetica, Arial,sans-serif;
     color: rgba(35,30,30,0.9);
-    /*text-align: left;*/
     text-rendering: optimizeLegibility;
     margin-left: auto;
     margin-right: auto;
@@ -10,6 +9,11 @@ body {
 }
 a{
 	text-decoration: none;
+	cursor: pointer;
+}
+
+a.title{
+	 color: rgba(35,30,30,0.9);
 }
 
 a.Tyler{
@@ -18,6 +22,14 @@ a.Tyler{
 
 a.Github{
 	color: #00CC77;
+}
+
+a.Writing{
+	color: #E64626;
+}
+
+a.Art{
+	color: #D3771A;
 }
 
 ol{
@@ -31,4 +43,23 @@ ul{
 
 div {
 	margin: auto;
+}
+
+p.workheader{
+	text-align: center;
+	color: Grey;
+	font-size: 30px;
+	font-style: italic;
+	margin: 0px 0px 0px 0px;
+	padding: 0px 0px 0px 0px;
+	border: 0px solid;
+}
+
+div.projects{
+	text-align: center;
+	margin-bottom: 10px;
+}
+
+hr.style1 {
+	border: 1px dashed #8c8b8b;
 }
