--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -69,6 +69,13 @@ figure{
     margin-bottom: 20px;
 }
 
+.img-resume{
+    max-width: 59em;
+    max-height: 50em;
+    margin: 0 auto;
+    text-align: center;
+}
+
 /*links*/
 a{
 	text-decoration: none;
@@ -96,10 +103,24 @@ a.Ochre{
 }
 
 a.image-link {
-    display: inline-block;
-    vertical-align: bottom; /* try out: bottom, middle, top */
-    margin-bottom: 30px;
-    text-decoration: none;
+    width: 100%;
+    float: left;
+    height: 500px;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+a.resume-link {
+    display: table !important;
+    vertical-align: bottom;
+    max-width: 50em;
+    max-height: 50em;
+    margin: 0 auto;
+    text-align: center;
 }
 
 a.image-link img {
@@ -107,8 +128,8 @@ a.image-link img {
 }
 
 #portfolio .portfolio-item {
-    max-width: 60em;
     text-align: center;
+    display: block;
 }
 
 .about-me-panel{
@@ -128,11 +149,13 @@ color: white;
 
 .image-link .thumb-overlay {
 background: rgba(21,21,21,0);
-bottom: 0;
+position: absolute;
 left: 0;
 top: 0;
-right: 0;
-position: absolute;
+width: 100%;
+height:100%;
+display: block;
+vertical-align: bottom;
 }
 
 .image-link:hover .text {
