--- a/css/style.css
+++ b/css/style.css
@@ -9,11 +9,15 @@ body {
 section.text-section{
     max-width: 50em;
     margin: 0 auto;
+    text-align: justify;
+    padding-left: 5px;
+    padding-right: 5px;
 }
 
 section.text-section-thin{
     max-width: 42em;
     margin: 0 auto;
+    text-align: justify;
 }
 
 ol{
