--- a/Portfolio Website/css/style.css
+++ b/Portfolio Website/css/style.css
@@ -1,8 +1,9 @@
 body {
 	background-color: #FFF;
-    font: 20px/1.6 'Montserrat', Helvetica, Arial,sans-serif;
+    font: 20px/1.6 'Montserrat', Helvetica, Arial, sans-serif;
     color: rgba(35,30,30,0.9); /*231e1e*/
     text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
 }
 
 ::selection {
@@ -24,7 +25,7 @@ section.text-section{
 }
 
 section.text-section-thin{
-    max-width: 40em;
+    max-width: 44em;
     margin: 0 auto;
     text-align: justify;
 }
@@ -129,14 +130,11 @@ h2{
 a{
 	text-decoration: none;
 	cursor: pointer;
+    color: #6699ff;
 }
 
 a.title{
 	 color: rgba(35,30,30,0.9);
-}
-
-a {
-	color: #6699ff;
 }
 
 a.Blue{
@@ -178,7 +176,13 @@ a.resume-link {
     max-height: 50em;
     margin: 0 auto;
     text-align: center;
+    color: #f9c80e;
 }
+
+a.resume-link:hover {
+    color: #E0B20D;
+}
+
 
 a.image-link img {
     vertical-align: bottom; /* try out: bottom, middle, top */
@@ -187,8 +191,8 @@ a.image-link img {
 #portfolio .portfolio-item {
     text-align: center;
     display: block;
-    padding-left: 0px;
-    padding-right: 0px;
+    padding-left: 0;
+    padding-right: 0;
 }
 
 .about-me-panel{
@@ -228,7 +232,7 @@ background: rgba(0,0,0,0.70);
 /*navbar*/
 .navbar-default{
     background-color: #FFF;
-    border: 0px;
+    border: 0;
     margin-top: 10px;
     padding-right: 10px;
 }
@@ -241,6 +245,7 @@ background: rgba(0,0,0,0.70);
 .navbar-nav > li.active{
     -ms-transform: skewX(-10deg); /* IE 9 */
     -webkit-transform: skewX(-10deg); /* Safari */
+    -moz-transform: skewX(-10deg);
     transform: skewX(-10deg);
 }
 
@@ -260,13 +265,14 @@ background: rgba(0,0,0,0.70);
     display:inline-block; /*important line*/
     -ms-transform: skewX(10deg); /* IE 9 */
     -webkit-transform: skewX(10deg); /* Safari */
+    -moz-transform: skewX(10deg);
     transform: skewX(10deg);
     color:  #FEFEFE; 
 }
 
 .navbar-img {
     height: 45px;
-    padding: 0px;
+    padding: 0;
     margin: -8px;
 }
 
@@ -312,6 +318,7 @@ background: rgba(0,0,0,0.70);
     background-color: #E64626;
     -ms-transform: skewX(-15deg);
     -webkit-transform: skewX(-15deg);
+    -moz-transform: skewX(-15deg);
     transform: skewX(-15deg);
     left: 30px;
     
@@ -319,9 +326,21 @@ background: rgba(0,0,0,0.70);
 
 .front-styles{
     padding-top: 150px;
-    font-size: 38px;
+    font-size: 44px;
     text-align: left;
     width: 900px;
+}
+
+.front-styles > p {
+    margin-bottom: 10px;
+}
+
+.four-styles{
+    padding-top: 75px;
+    font-size: 44px;
+    text-align: left;
+    max-width: 2000px;
+    margin-left: 50px;
 }
 
 .work-invite {
@@ -342,6 +361,7 @@ a.bttn{
 	padding: 0.45em 0.85em;
     -ms-transform: skewX(-10deg);
     -webkit-transform: skewX(-10deg);
+    -moz-transform: skewX(-10deg);
     transform: skewX(-10deg);
 }
 
@@ -349,6 +369,7 @@ a.bttn > span{
      display:inline-block; /*important line*/
     -ms-transform: skewX(10deg);
     -webkit-transform: skewX(10deg);
+    -moz-transform: skewX(10deg);
     transform: skewX(10deg);
 }
 
